# OpenCV-Dlib

./: CMakeLists.txt  README.md  main.cpp
docker_files/: docker-compose.yaml
src/: CMakeLists.txt  main.cpp
